Gestion lien image

--- a/sample/simple.html
+++ b/sample/simple.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Simple sample of angular split html</title>
 	<script src="../bower_components/angular/angular.js"></script>
+	<script src="../bower_components/lodash/lodash.js"></script>
 	<script src="../bower_components/jquery/dist/jquery.js"></script>
 	<script src="../dist/angular-split-html.js"></script>
 	<script src="app.js">
